Fix apparent alignment issues with edit icons - again

--- a/src/components/shoppingListItem/shoppingListItem.module.css
+++ b/src/components/shoppingListItem/shoppingListItem.module.css
@@ -62,6 +62,7 @@
   display: grid;
   grid-template-columns: 1fr 1fr;
   padding: 0 8px 4px;
+  margin-top: -2px;
 }
 
 .icon {
